--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body{
 	background-position: center center;
 	background-size: cover;	
     color: white;
-    font-family: 'Kdam Thmor Pro', sans-serif;
 }
 
 
@@ -32,12 +31,12 @@ body{
 }
 
 span {
-    color: red;
+    color:coral;
 }
 
 
 h1 {
-    /* margin-bottom: 2rem; */
+    margin-bottom: 1rem;
     font-size: 3rem;
 }
 
@@ -46,18 +45,40 @@ h1 {
 }
 input {
     height: 2.5rem;
-    width: 7rem;
+    width: 6.5rem;
     text-align: center;
     margin-bottom: 1rem;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+    border-radius: 6px;
+    color:coral;
+    cursor: pointer;
 }
 
 button {
-    height: 2.5rem;
-    width: 7rem;
-    margin: .5rem 0;
-    cursor: pointer;
-    font-family: 'Kdam Thmor Pro', sans-serif;
+  background: coral;
+  border: 1px solid coral;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 16px;
+  min-height: 40px;
+  outline: none;
+  padding: 12px 14px;
+  margin-bottom: 1rem;
+}
+
+button:hover,
+button:active {
+  background-color: initial;
+  background-position: 0 0;
+  color:coral;
+}
+
+button:active {
+  opacity: .5;
 }
 
 p {
@@ -65,59 +86,34 @@ p {
 }
 
 
-/* 
-@media (max-width:900px){
-    h1{
-        width: 50%;
-        margin-top: 150px;
-        font-size: 2rem;
-    }
-    .please, .para, .life{      
-        font-size: 2rem;  
-    }
-    .input{
-        width: 100px;
-        height: 40px;
-        font-size: 30px;
-        }
-    .check, .restart{
-        width: 100px;
-        line-height: 40px;
-        font-size: 20px;
-    }
-    .check:active, .restart:active{
-        font-size: 23px;
-    }
-}
+
 @media (max-width:470px){
-     header {
-         display: flex;
-         flex-direction: column;
-         justify-content: center;
-         align-items: center;
-     }
+
     h1{
         width: 50%;
-        margin-top: 2.7rem;
+        margin-top: -2.7rem;
         font-size: 1rem;
         text-align: center;
     }
     .please, .lets, .game-end{      
         font-size: 1rem;  
     }
+
     #number {
         width: 70px;
         height: 30px;
         font-size: 20px;
         border-radius: 5px;
         }
+
     .check, .restart{
         width: 70px;
         line-height: 30px;
         font-size: 10px;
         border-radius: 5px;
+
     }
     .check:active, .restart:active{
         font-size: 13px;
     }
-} */
+}
