--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap' );
 
 * {
     margin: 0;
@@ -31,7 +31,7 @@ body{
 }
 
 span {
-    color:coral;
+    color:black;
 }
 
 
@@ -50,13 +50,13 @@ input {
     margin-bottom: 1rem;
     font-size: 1.5rem;
     border-radius: 6px;
-    color:coral;
+    color:black;
     cursor: pointer;
 }
 
 button {
-  background: coral;
-  border: 1px solid coral;
+  background: black;
+  border: 1px solid black;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
   color: #FFFFFF;
@@ -74,7 +74,7 @@ button:hover,
 button:active {
   background-color: initial;
   background-position: 0 0;
-  color:coral;
+  color:black;
 }
 
 button:active {
@@ -85,35 +85,63 @@ p {
     font-size: 2rem;
 }
 
-
-
-@media (max-width:470px){
-
-    h1{
-        width: 50%;
-        margin-top: -2.7rem;
-        font-size: 1rem;
-        text-align: center;
+.check, .restart {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.25em 0.5em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .check:active .restart:active {
+    box-shadow: 0px 0px 0px 0px;
+    top: 5px;
+    left: 5px;
+  }
+  
+  @media (min-width: 768px) {
+    .check, .restart {
+      padding: 0.25em 0.75em;
     }
-    .please, .lets, .game-end{      
-        font-size: 1rem;  
-    }
+  }
 
-    #number {
-        width: 70px;
-        height: 30px;
-        font-size: 20px;
-        border-radius: 5px;
+
+    /* @media (max-width:470px){
+    
+        h1{
+            width: 50%;
+            margin-top: -2.7rem;
+            font-size: 1rem;
+            text-align: center;
         }
-
-    .check, .restart{
-        width: 70px;
-        line-height: 30px;
-        font-size: 10px;
-        border-radius: 5px;
-
-    }
-    .check:active, .restart:active{
-        font-size: 13px;
-    }
-}
+        .please, .lets, .game-end{      
+            font-size: 1rem;  
+        }
+    
+        #number {
+            width: 70px;
+            height: 30px;
+            font-size: 20px;
+            border-radius: 5px;
+            }
+    
+        .check, .restart{
+            width: 70px;
+            line-height: 30px;
+            font-size: 10px;
+            border-radius: 5px;
+    
+        }
+        .check:active, .restart:active{
+            font-size: 13px;
+        }
+    } */
